[gd_scene load_steps=13 format=3 uid="uid://cuaaryu5ean8r"]

[ext_resource type="Texture2D" uid="uid://fmpjjr6u6bsj" path="res://assets/bomb.png" id="1_egm5b"]
[ext_resource type="Script" path="res://Scripts/bomb.gd" id="1_noc6v"]
[ext_resource type="Script" path="res://Scripts/bomb_explos.gd" id="3_f6f3w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wpam0"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_15duv"]
radius = 17.0

[sub_resource type="Gradient" id="Gradient_vj13n"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0.639216, 0.301961, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qyfn3"]
gradient = SubResource("Gradient_vj13n")

[sub_resource type="Curve" id="Curve_p7e5g"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.941327, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_cma7j"]
curve = SubResource("Curve_p7e5g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a56uk"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
radial_velocity_min = 10.0
radial_velocity_max = 20.0
gravity = Vector3(0, 98, 0)
color_ramp = SubResource("GradientTexture1D_qyfn3")
emission_curve = SubResource("CurveTexture_cma7j")

[sub_resource type="Gradient" id="Gradient_jkhxg"]
offsets = PackedFloat32Array(0, 0.565657)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cadhw"]
gradient = SubResource("Gradient_jkhxg")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="bomb" type="Node2D"]
script = ExtResource("1_noc6v")
explosion_radius = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_egm5b")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_wpam0")

[node name="bomb_explos" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false
script = ExtResource("3_f6f3w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bomb_explos"]
shape = SubResource("CircleShape2D_15duv")

[node name="fuse" type="Timer" parent="."]

[node name="Fuse" type="GPUParticles2D" parent="."]
position = Vector2(0, -4)
emitting = false
process_material = SubResource("ParticleProcessMaterial_a56uk")
lifetime = 0.3

[node name="PointLight2D" type="PointLight2D" parent="."]
enabled = false
color = Color(1, 0.572549, 0, 1)
energy = 0.52
texture = SubResource("GradientTexture2D_cadhw")

[node name="delete" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="bomb_explos" to="bomb_explos" method="_on_area_entered"]
[connection signal="timeout" from="fuse" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="delete" to="." method="_on_delete_timeout"]
